--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^3.4.4",
+    "web-vitals": "^2.1.4",
+    "main": "dist/cjs"
   },
   "scripts": {
     "start": "react-scripts start",
